# RealTimeRaytracer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml  cpp-linter.yml
cmake/: toolchain-llvm-local.cmake
src/: main.cpp  sphere.cppm
src/app/: app.cppm  application.cppm  input.cppm  structs.cppm  window.cppm
src/app/setup/: create_scene.cppm  geometry_builder.cppm
src/core/: file.cppm  log.cppm  utils.cppm
src/scene/: area_light.cppm  camera.cppm  object.cppm  scene_info.cppm  sphere.cppm
src/scene/geometry/: object.cppm  triangle.cppm  vertex.cppm
src/scene/textures/: texture.cppm
src/shaders/: LTC.glsl  ao.rgen  closesthit.rchit  combine.comp  cook-torrance.glsl  denoise.comp  intersect.rint  miss.rmiss  opacity.rahit  phong.rchit  raycommon.glsl  raygen.rgen  shadowMiss.rmiss
src/vulkan/: compute_pipeline.cppm  dispatch.cppm  ray_tracing_pipeline.cppm  types.cppm  vulkan_context.cppm
src/vulkan/context/: command_buffer.cppm  command_pool.cppm  device.cppm  instance.cppm  surface.cppm  swapchain.cppm
src/vulkan/memory/: buffer.cppm  descriptor_pool.cppm  descriptor_set.cppm  descriptor_set_layout.cppm  image.cppm  image_sampler.cppm
src/vulkan/raytracing/: blas.cppm  tlas.cppm
tools/: bootstrap-llvm.sh  bootstrap-xorg-libs.sh  bootstrap.sh
